Added a conversion event to the PLC

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -136,6 +136,14 @@
  poland.6.f: "Even though we come from separate nations\nWe vow to stand by each other\nAnd be blood brothers forever\nLet us agree to protect the people of our homelands!"
  poland.6.a: "And so ends a 500-year-old struggle... or a new one begins?"
 
+ #New pagan religion pop up
+ poland.7.t: "A 'new' old religion"
+ poland.7.d: "With the recent rise in National Identity, certain aspects of our past have been resurfacing, such as the Old Faiths. Most prominently Baltic Paganism, as our Lithuanian brothers were the last of the peoples of Europe to convert to Christianity. However they are not the only ones to arise. The question is, how should we react?"
+ poland.7.f: "TODO"
+ poland.7.a: "Heresy, suppress them."
+ poland.7.b: "Tolerate them."
+ poland.7.c: "Perhaps we should convert."
+
  #moldova
  moldavia_events.1.t: "Between the Hammer and the Anvil"
  moldavia_events.1.d: "The Danubian Principalities find themselves ensnared between the ambitions of greater empires. With the Tatars to the east, the Hungarians to the west, and the Romans watching from the south, Moldavia must tread carefully. A single misstep could spell subjugation—but careful diplomacy and steely resolve may yet carve a path to lasting sovereignty."
