added suggestions form discord
-subsidize food now adds government expenses and increased welfare cost
-added a reduce conscription button

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -220,6 +220,10 @@
  je_reduce_taxes_for_the_peasantry_button_desc: "Reduce the taxes for the peasantry, this will definitely appease the [br_concept_3de_estate]."
  je_revoke_reduced_taxes_for_the_peasantry_button: "Revoke reduced taxes for the peasantry"
  je_revoke_reduced_taxes_for_the_peasantry_button_desc: "Revoke the reduced taxes for the peasantry, this will definitely upset the [br_concept_3de_estate]."
+ je_reduce_conscription_button: "Reduce conscription"
+ je_reduce_conscription_button_desc: "Reduce conscription for the peasantry, this will definitely appease the [br_concept_3de_estate]."
+ je_revoke_reduced_conscription_button: "Revoke reduce conscription"
+ je_revoke_reduced_conscription_button_desc: "Revoke the reduced conscription for the peasantry, this will definitely upset the [br_concept_3de_estate]."
  #Monarchy buttons
  je_move_imperial_residence_button: "Move the [br_concept_imperial_residence]"
  je_move_imperial_residence_button_desc: "Move the [br_concept_imperial_residence] to [GetBuildingType('br_building_versailles').GetName]"
@@ -417,6 +421,7 @@
  br_modifier_subsidize_food_distribution: "Subsidize food distribution"
  br_modifier_new_noble_titles: "New Noble titles"
  br_modifier_reduced_land_taxes: "Reduced land taxes"
+ br_modifier_reduced_conscription: "Reduced Conscription"
  br_modifier_holiest_of_empires: "Holiest of Empires"
  br_modifier_an_aristocratic_empire: "An Aristocratic Empire"
  br_modifier_a_new_foreign_emperor: "A Foreign Emperor"
