taxation level affects 3de estate dissatisfaction
-taxation level affects monthly 3de estate dissatisfaction

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -60,6 +60,13 @@
  br_impending_revolution_has_private_schools_loc: "has enacted [GetLawType('law_private_schools').GetName]"
  br_impending_revolution_has_public_schools_loc: "has enacted [GetLawType('law_public_schools').GetName]"
 
+ #Tax level effect
+ br_impending_revolution_has_very_low_tax_level_loc: "has #b #blue very low#!#! [Concept('concept_taxes', 'Taxation Level')]"
+ br_impending_revolution_has_low_tax_level_loc: "has #b #blue low#!#! [Concept('concept_taxes', 'Taxation Level')]"
+ br_impending_revolution_has_medium_tax_level_loc: "has #b #blue medium#!#! [Concept('concept_taxes', 'Taxation Level')]"
+ br_impending_revolution_has_high_tax_level_loc: "has #b #blue high#!#! [Concept('concept_taxes', 'Taxation Level')]"
+ br_impending_revolution_has_very_high_tax_level_loc: "has #b #blue very high#!#! [Concept('concept_taxes', 'Taxation Level')]"
+
  #######################################################################################
 
 
