Fix broken states

--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -414,8 +414,8 @@
  STATE_AZERBAIJAN: "Baku"
  STATE_GREATER_CAUCASUS: "Sakartvelo"
  STATE_MONTENEGRO: "Dioklea"
- STATE_NORTHERN_SERBIA: "Northern Serbia"
- STATE_SOUTHERN_SERBIA: "Southern Serbia"
+ #STATE_WESTERN_SERBIA: "Northern Serbia"
+ STATE_EASTERN_SERBIA: "Southern Serbia"
  STATE_EASTERN_THRACE: "Konstantinople"
  STATE_HUDAVENDIGAR: "Optimatoi"
  STATE_AYDIN: "Opsikion"
@@ -546,8 +546,8 @@
  STATE_APULIA: "Apulia"
  STATE_WEST_GALICIA: "Galicja"
  STATE_EAST_GALICIA: "Halychyna"
- STATE_EAST_SLOVAKIA: "East Slovakia"
- STATE_WEST_SLOVAKIA: "West Slovakia"
+ #STATE_EAST_SLOVAKIA: "East Slovakia"
+ #STATE_WEST_SLOVAKIA: "Slovakia"
  STATE_DALMATIA: "Dalmatia"
  STATE_CROATIA: "Croatia"
  STATE_SLAVONIA: "Slavonia"
