--- a/localization/english/replace/cultures_l_english.yml
+++ b/localization/english/replace/cultures_l_english.yml
@@ -274,7 +274,7 @@
  sukuma: "Sukuma"
  swahili: "Swahili"
  tigray: "Tigray"
- unyamwezi: "Unyamwezi"
+ nyamwezi: "Unyamwezi"
  southern_african_culture_group: "Southern African"
  chewa: "Chewa"
  herero: "Herero"
