update replace loc

--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -572,6 +572,7 @@
  STATE_EAST_PRUSSIA: "Preussen"
  STATE_RHINELAND: "Rhineland"
  STATE_NORTH_RHINE: "North Rhine"
+ STATE_LOWER_SILESIA: "Lower Silesia"
  STATE_BRANDENBURG: "Brannenborg"
  STATE_SCHLESWIG_HOLSTEIN: "Slesvig-Holsten"
  STATE_WURTTEMBERG: "Württemberg"
@@ -777,3 +778,7 @@
  STATE_BUNDELKHAND: "Bundelkhand"
  STATE_HILL_PUNJAB: "Punjab Hills"
  STATE_KURNOOL: "Ceded Districts"
+ STATE_BUKOVINA: "Bukovina"
+ STATE_RUTHENIA: "Ruthenia"
+ STATE_KOSOVO: "Kosovo"
+ STATE_UPPER_SILESIA: "Upper Silesia"
