--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -164,6 +164,13 @@
  HUB_NAME_STATE_RUHR_wood: "Siegen"
  HUB_NAME_STATE_RUHR_farm: "Hachenburg"
 
+ HUB_NAME_STATE_BRUNSWICK_city_german: "Braunschweig"
+ HUB_NAME_STATE_HANNOVER_city_german: "Hannover"
+ HUB_NAME_STATE_FRANCONIA_city_german: "Nürnberg"
+ HUB_NAME_STATE_BAVARIA_city_german: "München"
+ HUB_NAME_STATE_NORTH_RHINE_city_german: "Köln"
+ HUB_NAME_STATE_EAST_SWITZERLAND_wood_german: "Luzern"
+
   #Belgium
  HUB_NAME_STATE_WALLONIA_city: "Luxembourg"
  HUB_NAME_STATE_WALLONIA_mine: "Liège"
@@ -174,6 +181,11 @@
  HUB_NAME_STATE_FLANDERS_mine: "Hasselt"
  HUB_NAME_STATE_FLANDERS_farm: "Antwerp"
  HUB_NAME_STATE_FLANDERS_wood: "Ghent"
+
+ HUB_NAME_STATE_FLANDERS_city_german: "Brüssel"
+ HUB_NAME_STATE_FLANDERS_port_german: "Brügge"
+ HUB_NAME_STATE_FLANDERS_farm_german: "Antwerpen"
+ HUB_NAME_STATE_FLANDERS_wood_german: "Gent"
   
   #Netherlands
  HUB_NAME_STATE_GELRE_city: "Eindhoven"
@@ -190,6 +202,10 @@
  HUB_NAME_STATE_HOLLAND_farm: "Utrecht"
  HUB_NAME_STATE_HOLLAND_wood: "Breda"
  HUB_NAME_STATE_HOLLAND_mine: "Broek in Waterland"
+
+ HUB_NAME_STATE_GELRE_farm_german: "Nimwegen"
+ HUB_NAME_STATE_GELRE_wood_german: "Arnheim"
+ HUB_NAME_STATE_FRIESLAND_city_german: "Gröningen"
   
   # Britain 
  HUB_NAME_STATE_EAST_ANGLIA_city: "Grantanbrycg"
@@ -351,6 +367,9 @@
  HUB_NAME_STATE_MAINE_ANJOU_mine: "Laval"
  HUB_NAME_STATE_MAINE_ANJOU_farm: "Le Mans"
  HUB_NAME_STATE_MAINE_ANJOU_wood: "Tours"
+
+ HUB_NAME_STATE_FRENCH_LOW_COUNTRIES_port_german: "Dünkirchen"
+
   # Portugal
  HUB_NAME_STATE_ALENTEJO_city: "Évora"
  HUB_NAME_STATE_ALENTEJO_port: "Lagos"
@@ -529,6 +548,8 @@
  HUB_NAME_STATE_AUSTRIA_farm: "Linz"
  HUB_NAME_STATE_AUSTRIA_wood: "St. Pölten"
 
+ HUB_NAME_STATE_SOUTH_TYROL_farm_german: "Rovereid"
+
   #Czech Repbulic
  HUB_NAME_STATE_BOHEMIA_city: "Prague"
  HUB_NAME_STATE_BOHEMIA_mine: "Ceske"
@@ -539,10 +560,14 @@
  HUB_NAME_STATE_MORAVIA_farm: "Breclav"
  HUB_NAME_STATE_MORAVIA_wood: "Jihlaba"
  HUB_NAME_STATE_SLOVAKIA_city: "Pressburg"
- HUB_NAME_STATE_SLOVAKIA_mine: "Zilina"
- HUB_NAME_STATE_SLOVAKIA_farm: "Trencin"
- HUB_NAME_STATE_SLOVAKIA_wood: "Banska Bystrica"
- HUB_NAME_STATE_CENTRAL_HUNGARY_city: "Budapest"
+ HUB_NAME_STATE_SLOVAKIA_mine: "Banská Bystrica"
+ HUB_NAME_STATE_SLOVAKIA_farm: "Kosice"
+ HUB_NAME_STATE_SLOVAKIA_wood: "Zilina"
+ HUB_NAME_STATE_RUTHENIA_city: "Uzhhorod"
+ HUB_NAME_STATE_RUTHENIA_mine: "Solotvyno"
+ HUB_NAME_STATE_RUTHENIA_farm: "Mukachevo"
+ HUB_NAME_STATE_RUTHENIA_wood: "Khust"
+ HUB_NAME_STATE_CENTRAL_HUNGARY_city: "Buda"
  HUB_NAME_STATE_CENTRAL_HUNGARY_mine: "Miskolc"
  HUB_NAME_STATE_CENTRAL_HUNGARY_farm: "Szolnok"
  HUB_NAME_STATE_CENTRAL_HUNGARY_wood: "Debrecen"
@@ -605,6 +630,10 @@
  HUB_NAME_STATE_EASTERN_SERBIA_mine: "Leskovats"
  HUB_NAME_STATE_EASTERN_SERBIA_farm: "Ferizai"
  HUB_NAME_STATE_EASTERN_SERBIA_wood: "Besiane"
+ HUB_NAME_STATE_KOSOVO_city: "Pristina"
+ HUB_NAME_STATE_KOSOVO_mine: "Mitrovica"
+ HUB_NAME_STATE_KOSOVO_farm: "Prizren"
+ HUB_NAME_STATE_KOSOVO_wood: "Peja"
  HUB_NAME_STATE_MONTENEGRO_city: "Dioklea"
  HUB_NAME_STATE_MONTENEGRO_port: "Ragusta"
  HUB_NAME_STATE_MONTENEGRO_mine: "Moikovats"
@@ -675,15 +704,23 @@
  HUB_NAME_STATE_BULGARIA_farm: "Shumen"
  HUB_NAME_STATE_BULGARIA_wood: "Nicopolis"
 
+ HUB_NAME_STATE_WESTERN_SERBIA_city_german: "Belgrad"
+
  HUB_NAME_STATE_WALLACHIA_city: "Bucharest"
  HUB_NAME_STATE_WALLACHIA_mine: "Craiova"
  HUB_NAME_STATE_WALLACHIA_farm: "Buzău"
  HUB_NAME_STATE_WALLACHIA_wood: "Slatina"
 
  HUB_NAME_STATE_MOLDAVIA_city: "Iaşi"
- HUB_NAME_STATE_MOLDAVIA_mine: "Rădăuți"
+ HUB_NAME_STATE_MOLDAVIA_mine: "Bacău"
  HUB_NAME_STATE_MOLDAVIA_farm: "Focşani"
- HUB_NAME_STATE_MOLDAVIA_wood: "Bacău"
+ HUB_NAME_STATE_MOLDAVIA_wood: "Galați"
+ HUB_NAME_STATE_BUKOVINA_city: "Czernowitz"
+ HUB_NAME_STATE_BUKOVINA_mine: "Kimpolung"
+ HUB_NAME_STATE_BUKOVINA_farm: "Radautz"
+ HUB_NAME_STATE_BUKOVINA_wood: "Suceava"
+
+ HUB_NAME_STATE_BUKOVINA_wood_german: "Sutschawa"
 
  HUB_NAME_STATE_DOBRUDJA_city: "Tulcea"
  HUB_NAME_STATE_DOBRUDJA_port: "Constanţa"
@@ -698,7 +735,15 @@
  HUB_NAME_STATE_WEST_GALICIA_city: "Kraków"
  HUB_NAME_STATE_WEST_GALICIA_mine: "Jaroslaw"
  HUB_NAME_STATE_WEST_GALICIA_farm: "Rzeszow"
- HUB_NAME_STATE_WEST_GALICIA_wood: "Bielsko"
+ HUB_NAME_STATE_WEST_GALICIA_wood: "Tarnów"
+ HUB_NAME_STATE_LOWER_SILESIA_city: "Breslau"
+ HUB_NAME_STATE_LOWER_SILESIA_mine: "Görlitz"
+ HUB_NAME_STATE_LOWER_SILESIA_farm: "Liegnitz"
+ HUB_NAME_STATE_LOWER_SILESIA_wood: "Glogau"
+ HUB_NAME_STATE_UPPER_SILESIA_city: "Oppeln"
+ HUB_NAME_STATE_UPPER_SILESIA_mine: "Königshütte"
+ HUB_NAME_STATE_UPPER_SILESIA_farm: "Troppau"
+ HUB_NAME_STATE_UPPER_SILESIA_wood: "Teschen"
  HUB_NAME_STATE_POSEN_city: "Poznan"
  HUB_NAME_STATE_POSEN_mine: "Leszno"
  HUB_NAME_STATE_POSEN_farm: "Bydgoszcz"
@@ -1110,8 +1155,8 @@
  HUB_NAME_STATE_KAUNAS_port: "Palanga"
  HUB_NAME_STATE_VILNIUS_city: "Vilnius"
  HUB_NAME_STATE_VILNIUS_farm: "Druskeniki"
- HUB_NAME_STATE_VILNIUS_wood: "Olita"
- HUB_NAME_STATE_VILNIUS_mine: "Švenčionys"
+ HUB_NAME_STATE_VILNIUS_wood: "Švenčionys"
+ #HUB_NAME_STATE_VILNIUS_mine: "NAME"
 
  #Tuva
  HUB_NAME_STATE_TUVA_city: "Khem-Beldir"
@@ -1740,28 +1785,28 @@
  HUB_NAME_STATE_CHIANG_MAI_wood: "Chiang Rai"
  HUB_NAME_STATE_LAOS_city: "Luang Prabang"
  HUB_NAME_STATE_LAOS_mine: "Vientiane"
- HUB_NAME_STATE_LAOS_farm: "Champassak"
- HUB_NAME_STATE_LAOS_wood: "Nam Ha"
+ HUB_NAME_STATE_LAOS_farm: "Pakse"
+ HUB_NAME_STATE_LAOS_wood: "Savannakhet"
  HUB_NAME_STATE_TONKIN_city: "Hanoi"
  HUB_NAME_STATE_TONKIN_port: "Haiphong"
  HUB_NAME_STATE_TONKIN_mine: "Cao Bang"
- HUB_NAME_STATE_TONKIN_farm: "Tanh Hóa"
+ HUB_NAME_STATE_TONKIN_farm: "Thanh Hóa"
  HUB_NAME_STATE_TONKIN_wood: "Lào Cai"
- HUB_NAME_STATE_ANNAM_city: "Da Nang"
- HUB_NAME_STATE_ANNAM_port: "Đồng Hới"
+ HUB_NAME_STATE_ANNAM_city: "Huế"
+ HUB_NAME_STATE_ANNAM_port: "Da Nang"
  HUB_NAME_STATE_ANNAM_mine: "Quảng Ngãi"
  HUB_NAME_STATE_ANNAM_farm: "Vinh"
- HUB_NAME_STATE_ANNAM_wood: "Huế"
+ HUB_NAME_STATE_ANNAM_wood: "Đồng Hới"
  HUB_NAME_STATE_MEKONG_city: "Saigon"
  HUB_NAME_STATE_MEKONG_port: "Vũng Tàu"
  HUB_NAME_STATE_MEKONG_mine: "Pleiku"
- HUB_NAME_STATE_MEKONG_farm: "Qui Nhơn"
- HUB_NAME_STATE_MEKONG_wood: "Can Tho"
+ HUB_NAME_STATE_MEKONG_farm: "Can Tho"
+ HUB_NAME_STATE_MEKONG_wood: "Qui Nhơn"
  HUB_NAME_STATE_CAMBODIA_city: "Phnom Penh"
- HUB_NAME_STATE_CAMBODIA_port: "Krong Kampot"
- HUB_NAME_STATE_CAMBODIA_mine: "Krong Ban Lung"
- HUB_NAME_STATE_CAMBODIA_farm: "Krong Battambang"
- HUB_NAME_STATE_CAMBODIA_wood: "Krong Siem Reap"
+ HUB_NAME_STATE_CAMBODIA_port: "Kampot"
+ HUB_NAME_STATE_CAMBODIA_mine: "Stung Treng"
+ HUB_NAME_STATE_CAMBODIA_farm: "Battambang"
+ HUB_NAME_STATE_CAMBODIA_wood: "Siem Reap"
  HUB_NAME_STATE_NAKHON_RATCHASIMA_city: "Nakhon Ratchasima"
  HUB_NAME_STATE_NAKHON_RATCHASIMA_port: "Pattaya City"
  HUB_NAME_STATE_NAKHON_RATCHASIMA_mine: "Sakon Nakhon"
@@ -2876,11 +2921,11 @@
  HUB_NAME_STATE_LINDI_mine: "Mbeya"
  HUB_NAME_STATE_LINDI_farm: "Songea"
  HUB_NAME_STATE_LINDI_wood: "Iringa"
- HUB_NAME_STATE_ZANZIBAR_city: "Tanga"
+ HUB_NAME_STATE_ZANZIBAR_city: "Zanzibar"
  HUB_NAME_STATE_ZANZIBAR_port: "Dar es Salaam"
- HUB_NAME_STATE_ZANZIBAR_mine: "Moshi"
- HUB_NAME_STATE_ZANZIBAR_farm: "Somanga"
- HUB_NAME_STATE_ZANZIBAR_wood: "Mtwara"
+ HUB_NAME_STATE_ZANZIBAR_mine: "Bagamoyo"
+ HUB_NAME_STATE_ZANZIBAR_farm: "Chake Chake" 
+ HUB_NAME_STATE_ZANZIBAR_wood: "Lindi"
    
  HUB_NAME_STATE_SOUTH_MADAGASCAR_city: "Fianarantsoa"
  HUB_NAME_STATE_SOUTH_MADAGASCAR_port: "Tuléar"
