Add two unique sub laws for ERE.
- Added br_law_roman_supremacy as flavored ere law thats kind of a mix between subjecthood and National_supremacy
- Added br_law_themata as a flavored version of national guard

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -459,6 +459,10 @@
  law_mixed_army: "Mixed Military"
  law_mixed_army_desc: "A standing core of professional soldiers forms the heart of the army, bolstered in times of need by vast levies drawn from the feudal estates. This model blends discipline with sheer numbers, balancing quality and quantity."
 
+ br_law_roman_supremacy: "Roman Supremacy"
+ br_law_roman_supremacy_desc: "The Basileía Romaíon is the preeminent power in the known world, its authority sanctioned by divine right and historical destiny. All other nations are but tributaries or vassals to the imperial throne."
+ br_law_themata_system: "Themata System"
+ br_law_themata_system_desc: "The empire is divided into large military-administrative districts called themata, each governed by a strategos who commands local troops and oversees civil affairs. This system ensures rapid mobilization and regional defense."
 
  #Power Blocs
  Romaion_Bloc: "Basileía tōn Romaíon" #Koinopolitia
