--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -461,9 +461,11 @@
 
  br_law_roman_supremacy: "Roman Supremacy"
  br_law_roman_supremacy_desc: "The Basileía Romaíon is the preeminent power in the known world, its authority sanctioned by divine right and historical destiny. All other nations are but tributaries or vassals to the imperial throne."
- br_law_themata_system: "Themata System"
- br_law_themata_system_desc: "The empire is divided into large military-administrative districts called themata, each governed by a strategos who commands local troops and oversees civil affairs. This system ensures rapid mobilization and regional defense."
-
+ br_law_themata: "Themata System"
+ br_law_themata_desc: "The empire is divided into large military-administrative districts called themata, each governed by a strategos who commands local troops and oversees civil affairs. This system ensures rapid mobilization and regional defense."
+ br_law_tagmata_army: "Tagmata Army"
+ br_law_tagmata_army_desc: "The tagmata form the empire’s professional standing army, composed of elite soldiers sworn directly to the Basileus. Serving as the backbone of imperial power, they provide rapid response and sustained strength across distant campaigns. Their might is reinforced by the broader Themata, ensuring both flexibility and depth in the empire’s military."
+ 
  #Power Blocs
  Romaion_Bloc: "Basileía tōn Romaíon" #Koinopolitia
  Imperial_HRE: "Universum Regnum"
