romanization decree homeland assimilation now allowed

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -288,7 +288,7 @@
  state_trait_ethiopian_highlands: "Ethiopian Highlands"
 
  decree_romanisation: "Romanization"
- decree_romanisation_desc: "Begin efforts to \"Romanize\" this province."
+ decree_romanisation_desc: "Encourage the adoption of Roman speech, custom, and law to unify this province with the Empire."
 
  #Goods
  goods_output_tea_mult: "Building @tea!$tea$ output"
@@ -453,19 +453,19 @@
  combat_unit_type_screw_frigate: "Screw Frigate"
  combat_unit_type_carrack: "Carrack"
 
- # Laws
+ #Laws
  law_tribal_armies: "Tribal Society"
  law_tribal_armies_desc: "A militaristic tribal society is organized around kinship, loyalty, and the pursuit of martial glory. Warfare is not merely a necessity but a way of life, with military prowess shaping social status, economy, and governance alike."
  law_mixed_army: "Mixed Military"
  law_mixed_army_desc: "A standing core of professional soldiers forms the heart of the army, bolstered in times of need by vast levies drawn from the feudal estates. This model blends discipline with sheer numbers, balancing quality and quantity."
 
- br_law_roman_supremacy: "Roman Supremacy"
- br_law_roman_supremacy_desc: "The Basileía Romaíon is the preeminent power in the known world, its authority sanctioned by divine right and historical destiny. All other nations are but tributaries or vassals to the imperial throne."
+ br_law_roman_supremacy: "Roman Hegemonía"
+ br_law_roman_supremacy_desc: "The Basileía Rōmaíōn is the heart of civilization, heir to the Caesars and guardians of the true Roman legacy. Its culture, faith, and tongue shape the order of the oikoumenē, while foreign realms exist only in relation to the throne of the Basileus, as subjects, imitators, or adversaries awaiting Rome’s embrace."
  br_law_themata: "Themata System"
- br_law_themata_desc: "The empire is divided into large military-administrative districts called themata, each governed by a strategos who commands local troops and oversees civil affairs. This system ensures rapid mobilization and regional defense."
- br_law_tagmata_army: "Tagmata Army"
- br_law_tagmata_army_desc: "The tagmata form the empire’s professional standing army, composed of elite soldiers sworn directly to the Basileus. Serving as the backbone of imperial power, they provide rapid response and sustained strength across distant campaigns. Their might is reinforced by the broader Themata, ensuring both flexibility and depth in the empire’s military."
- 
+ br_law_themata_desc: "The empire is divided into themata, great military-administrative provinces governed by strategoi. Each commands the local stratiōtai while overseeing civil affairs, ensuring swift mobilization, regional defense, and the stability of imperial rule."
+ br_law_tagmata_army: "Imperial Tagmata"
+ br_law_tagmata_army_desc: "The tagmata are the empire’s professional standing troops, elite formations sworn directly to the Basileus. Serving as the core of imperial power, they provide rapid response and sustained strength in distant campaigns, reinforced by the might of the themata for depth and resilience."
+
  #Power Blocs
  Romaion_Bloc: "Basileía tōn Romaíon" #Koinopolitia
  Imperial_HRE: "Universum Regnum"
