removed duplicate loc keys

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -42,8 +42,8 @@
  ig_zoroastrian_priests: "Zoroastrian Priests"
  ig_zoroastrian_priests_desc: "#lore The Zoroastrian Priests, or Mobeds, are the keepers of the ancient faith of Ahura Mazda. Through fire temples, rituals, and sacred teachings, they strive to maintain purity and righteousness amidst a world increasingly given over to chaos.#!"
 
- ig_boyars: "Boyars"
- ig_boyars_desc: "#lore The Boyars are the old landed nobility of the Rus' and Eastern Europe. Possessing vast estates and hereditary privileges, they command not only wealth but immense influence over state affairs, often acting as kingmakers—or king-breakers.#!"
+ #ig_boyars: "Boyars" #moved to replace/misc_l_english
+ #ig_boyars_desc: "#lore The Boyars are the old landed nobility of the Rus' and Eastern Europe. Possessing vast estates and hereditary privileges, they command not only wealth but immense influence over state affairs, often acting as kingmakers—or king-breakers.#!"
 
  ig_szlachta: "Szlachta"
  ig_szlachta_desc: "#lore The Szlachta are the noble class of the Polish-Lithuanian Commonwealth. Bound by traditions of liberty, they wield extraordinary legislative and political power through the Sejm and the Liberum Veto, fiercely guarding their ancient rights against royal centralization.#!"
@@ -277,7 +277,6 @@
  state_trait_Hyrcanian_forests: "Hyrcanian Forests"
  state_trait_Ispahan_mines: "Ispahan Mines"
  #state_trait_mesopotamian_floodplain: "Mesopotamian Floodplain"
- state_trait_anatolian_plateau: "Anatolian Plateau"
  state_trait_cold_water_port: "Cold Water Port"
  state_trait_spice_islands: "Spice Islands"
  state_trait_canada_forest: "Forests of the Great North"
