--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -404,7 +404,7 @@
  Wada: "Wada"
  Waermund: "Wærmund"
  Waltheof: "Waltheof"
- Wilfrid: "Wilfrið"
+ #Wilfrid: "Wilfrið"  #moved to replace/names_l_english
  Wulfric: "Wulfric"
  Waegmund: "Wægmund"
  
