--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -407,6 +407,7 @@
  #Wilfrid: "Wilfrið"  #moved to replace/names_l_english
  Wulfric: "Wulfric"
  Waegmund: "Wægmund"
+ Waldermar: "Waldermar"
  
  #Female First Names
  Aebbe: "Æbbe"
