--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -47,8 +47,8 @@
  afro_dutch: "Afro-Dutch"
 
  #Jewish Cultures
- romaniote: "Romaniote" #greco-roman jews in the ERE.
- mizrahi: "Musta'Arabi" #Jews in the Arab / Persian World.
+ romaniote: "Romaniote" #greco-roman jews in the ERE. Speak greek
+ mizrahi: "Musta'Arabi" #Jews in the Arab / Persian World. Speak arabic / persian
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1 within the replace folder
  #greek:1 "Romaíoi" 
@@ -57,5 +57,10 @@
 
  #Discrimination traits
  greco_roman_heritage: "Romaiokratía"
+ commonwealth_tradition: "Commonwealth Tradition"
  colonial_heritage: "Colonial"
  elysian_heritage: "Elysian"
+
+ #These are for base game cultures that have been removed from the mod so they don't show up in the tooltips.
+ heritage_removed_culture: "Heritage Removed"
+ language_removed_culture: "Language Removed"
