Culture suggestions from Capon.
Implemented some culture rename suggestions from Capon

--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -29,10 +29,10 @@
  skraeling: "Skraeling"
  apoikoi: "Apoikoi"
  cahokian: "Cahokian"
- colonial_french: "Colonial-French"
- colonial_italian: "Colonial-Italian"
- colonial_german: "Colonial-German"
- colonial_dutch: "Colonial-Dutch"
+ colonial_french: "Antarctican"
+ colonial_italian: "Amerigan"
+ colonial_german: "Welserländer" #or Venedisch
+ colonial_dutch: "Vrijburgerse" #Vrijburgerse
  colonial_british: "New Anglander"
  colonial_andalusian: "New Grenadian"
  colonial_japanese: "Kaigai Nihonjin" #formerly Kōkaijin and Kaitakusha
