--- a/localization/english/replace/cultures_l_english.yml
+++ b/localization/english/replace/cultures_l_english.yml
@@ -304,6 +304,7 @@
  assyrian: "Assyrian"
  iroquoian: "Iroquoian"
  kalmyk: "Kalmyk"
+ cajun: "Louisianian"
 
 ### Culture Heritage Groups
 heritage_group_african: "African"
