--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -49,6 +49,8 @@
  #Jewish Cultures
  romaniote: "Romaniote" #greco-roman jews in the ERE. Speak greek
  mizrahi: "Musta'Arabi" #Jews in the Arab / Persian World. Speak arabic / persian
+ heritage_romaniote: "Romaniote"
+ heritage_mizrahi: "Musta'Arabi"
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1 within the replace folder
  #greek:1 "Romaíoi" 
