--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -30,7 +30,8 @@
  apoikoi: "Apoikoi"
  cahokian: "Cahokian"
  colonial_french: "Antarctican"
- colonial_italian: "Amerigan"
+ colonial_italian: "Colonial Italian"
+ amerigan: "Amerigan"
  colonial_german: "Welserländer" #or Venedisch
  colonial_dutch: "Vrijburgerse" #Vrijburgerse
  colonial_british: "New Anglander"
