added warning to second bulgarian empire rule

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -440,7 +440,7 @@
  setting_bulgaria_game_rule_small: "Default: Bulgaria Pronia"
  setting_bulgaria_game_rule_small_desc: "Bulgaria nothing more than a Pronia of Basileia Romaion"
  setting_bulgaria_game_rule_large: "Second Bulgarian Empire"
- setting_bulgaria_game_rule_large_desc: "Bulgaria has broken off from Basileia Romaion and created a large empire centered on the danube.(There was no second Bulgarian Empire in the 12th century in this timeline.)"
+ setting_bulgaria_game_rule_large_desc: "Bulgaria has broken off from Basileia Romaion and created a large empire centered on the danube.(There was no second Bulgarian Empire in the 12th century in this timeline.)\n@warning! #r Is broken right now, this will cause a game crash#!"
 
 
  #Comabt units
