--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -148,7 +148,7 @@
  
  #Government Decisions
  abolish_feudalism_decision: "Abolish the Feudal System"
- abolish_feudalism_decision_desc: "For centuries, the people have labored under the yoke of feudal lords. Now, we cast off those chains and build a new order—one of equality, justice, and progress."
+ abolish_feudalism_decision_desc: "For centuries, the people have labored under the yoke of feudal lords. Now, we cast off those chains and build a new order, one of equality, justice, and progress."
 
  #AI Only decisions --- These are to boost AI countries and only target other AI countries
  br_byz_easy_agy: "AI Start Scripted War"
