Created Elysian as a separate language
- Its a mostly Hellenic language with lots of italian and french latin and other lingo divergences

--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -63,6 +63,8 @@
  commonwealth_tradition: "Commonwealth Tradition"
  colonial_heritage: "Colonial"
  elysian_heritage: "Elysian"
+ african_settler: "African Settler"
+ language_elysian:  "Elysian"
 
  #These are for base game cultures that have been removed from the mod so they don't show up in the tooltips.
  heritage_removed_culture: "Heritage Removed"
