--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -55,7 +55,7 @@
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1 within the replace folder
  #greek:1 "Romaíoi" 
- #romanian: "Vlach"
+ #romanian: "Vlach" #Because Romaioi are the Romans
  #sudanese: "Nubian"
 
  #Discrimination traits
@@ -65,6 +65,8 @@
  elysian_heritage: "Elysian"
  african_settler: "African Settler"
  language_elysian:  "Elysian"
+ language_coptic: "Coptic"
+ heritage_egyptian: "Egyptian"
 
  #These are for base game cultures that have been removed from the mod so they don't show up in the tooltips.
  heritage_removed_culture: "Heritage Removed"
