fixed spelling mistakes

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -204,7 +204,7 @@
  br_proclaim_ambition_to_restore_wre_decision: "Proclaim our ambition to restore the $br_WRE$"
  br_proclaim_ambition_to_restore_wre_decision_desc: "The $br_WRE$ may have fallen a long time ago but we will make it our mission to restore it."
  br_is_capital_in_europe_tt: "Your capital is in #b Europe#!"
- br_can_now_form_wre_tt: "We will be able to form the $br_WRE$ thru the [concept_nation_formation] tab"
+ br_can_now_form_wre_tt: "We will be able to form the $br_WRE$ through the [concept_nation_formation] tab"
 
  br_wre_swap_flag_decision: "Swap to an alternate flag"
  br_wre_swap_flag_decision_desc: "Swap to an afternate flag for our nation."
