--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -28,6 +28,7 @@
  br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
  br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
  br_modifier_restitutor_orbis: "Restitutor Orbis"
+ br_modifier_armenian_acceptance: "Eutimē Hypotagē"
 
  #IG
  ig_influence_modifier: "Influence Bonus"
