--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -132,8 +132,8 @@
  ideology_frontier_expansionist: "Frontier Expansionist"
  ideology_frontier_expansionist_desc: "Advocates for the aggressive expansion of the empire's frontiers, viewing untamed lands as ripe for conquest, settlement, and exploitation of both their natural wealth and their native peoples."
 
- ideology_sarmatism_paternalistic: "Sarmatism"
- ideology_sarmatism_paternalistic_desc: "Sarmatism (or Sarmatianism; Polish: Sarmatyzm; Lithuanian: Sarmatizmas) is an ethno-cultural ideology within the Polish–Lithuanian Commonwealth. It is the dominant Baroque culture and ideology of the nobility (szlachta). Together with the concept of \"Golden Liberty\", it formed a central aspect of the Commonwealth's culture and society. At its core is the unifying belief that the people of the Polish–Lithuanian Commonwealth descended from the ancient Iranian Sarmatians, the legendary invaders of contemporary Polish lands in antiquity"
+ ideology_sarmatism_paternalistic: "Golden Libertarian"
+ ideology_sarmatism_paternalistic_desc: "When the idea of the Golden Liberty began, it was unique for its time! It gave extensive liberties to all levels of the Szlachta and gave birth to our Sejm. Now it is used as a weapon to prevent needed change and power in the hand of the Szlachta."
  ideology_polonization: "Polonization"
  ideology_polonization_desc: "Polonization could be either voluntary or forced. It is most visible in territories where the Polish language or culture is dominant or where their adoption could result in increased prestige or social status, as is the case with the nobilities of Ruthenia and Lithuania."
  ideology_cossacks: "Cossacks"
