Intelligentsia name changed to Jadwigans
-Intelligentsia name changed to Jadwigans

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -48,6 +48,9 @@
  ig_szlachta: "Szlachta"
  ig_szlachta_desc: "#lore The Szlachta are the noble class of the Polish-Lithuanian Commonwealth. Bound by traditions of liberty, they wield extraordinary legislative and political power through the Sejm and the Liberum Veto, fiercely guarding their ancient rights against royal centralization.#!"
 
+ ig_jadwigans: "Jadwigans"
+ ig_jadwigans_desc: "The Jadwigans are a reformist group led by Princess Jadwiga, Sigismund III’s daughter. She, like most of the group, is well educated and wishes to modernize and reform the Commonwealth. Most Jadwigans come from the nation’s intellectuals, but has also gained support from some of the most educated and liberal members of the Szlachta in recent years."
+
  ig_hussite_church: "Hussite Church"
  ig_hussite_church_desc: "#lore The Hussite Church is a Christian denomination born in Bohemia from the teachings of Jan Hus. Advocating for communion in both kinds and resistance to corruption, it was a forerunner of the broader Protestant Reformation, blending faith with national identity.#!"
 
