Changed Republican to Jadwigan Reformists
-Made a new ideology: Jadwigan Reformist
-Changed Republican to Jadwigan Reformists
-TODO still need an icon for the new ideology

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -143,6 +143,8 @@
  ideology_cossacks_desc: "The Cossacks are a semi-nomadic and semi-militarized people, who, while under the nominal suzerainty of various Eastern European states, are allowed a great degree of self-governance in exchange for military service. Although numerous linguistic and religious groups came together to form the Cossacks, most of them coalesced and became East Slavic-speaking Orthodox Christians. The rulers of the Polish–Lithuanian Commonwealth and Russia endowed Cossacks with certain special privileges in return for the military duty to serve as irregular troops (mostly cavalry). The various Cossack groups are organized along military lines, with large autonomous groups called hosts. Each host has a territory consisting of affiliated villages called stanitsas."
  ideology_polish_patriotism: "Liberal Patriotism"
  ideology_polish_patriotism_desc: "This group's loyal to the state and it's institution, however they don't wish for state to encroach into their private lives and bussineses."
+ br_ideology_jadwigan_reformist: "Jadwigan Reformist"
+ br_ideology_jadwigan_reformist_desc: "Led by the Princess by whom the group gets its name, Jadwigans are not for the abolishment of the Monarchy, but they also hold the view that monarchs don’t get their power from a higher power, but from the people."
  ideology_mongol_jingoist: "Mongol Jingoist"
  ideology_mongol_jingoist_desc: "Mongol Jingoist"
  ideology_irredentist: "Irredentist"
