Changed Anti-Clerical to Warsaw Confederationist
-Made a new ideology: Warsaw Confederationist
-Changed Anti-Clerical to Warsaw Confederationist
-TODO still need an icon for the new ideology

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -145,6 +145,8 @@
  ideology_polish_patriotism_desc: "This group's loyal to the state and it's institution, however they don't wish for state to encroach into their private lives and bussineses."
  br_ideology_jadwigan_reformist: "Jadwigan Reformist"
  br_ideology_jadwigan_reformist_desc: "Led by the Princess by whom the group gets its name, Jadwigans are not for the abolishment of the Monarchy, but they also hold the view that monarchs don’t get their power from a higher power, but from the people."
+ br_ideology_warsaw_confederationist: "Warsaw confederationist"
+ br_ideology_warsaw_confederationist_desc: "This group believes in the importance of the Warsaw Confederation, a legal document promising freedom of religion within the Commonwealth, something believed to have been ignored for too long."
  ideology_mongol_jingoist: "Mongol Jingoist"
  ideology_mongol_jingoist_desc: "Mongol Jingoist"
  ideology_irredentist: "Irredentist"
