Change/Simplify Cossacks Description

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -140,7 +140,7 @@
  ideology_polonization: "Polonization"
  ideology_polonization_desc: "Polonization could be either voluntary or forced. It is most visible in territories where the Polish language or culture is dominant or where their adoption could result in increased prestige or social status, as is the case with the nobilities of Ruthenia and Lithuania."
  ideology_cossacks: "Cossacks"
- ideology_cossacks_desc: "The Cossacks are a semi-nomadic and semi-militarized people, who, while under the nominal suzerainty of various Eastern European states, are allowed a great degree of self-governance in exchange for military service. Although numerous linguistic and religious groups came together to form the Cossacks, most of them coalesced and became East Slavic-speaking Orthodox Christians. The rulers of the Polish–Lithuanian Commonwealth and Russia endowed Cossacks with certain special privileges in return for the military duty to serve as irregular troops (mostly cavalry). The various Cossack groups are organized along military lines, with large autonomous groups called hosts. Each host has a territory consisting of affiliated villages called stanitsas."
+ ideology_cossacks_desc: "While not officially counted as members of the Soltys, the Cossacks of the Commonwealth have found more willing allies within it to expand their rights and hope to be counted as citizens one day."
  ideology_polish_patriotism: "Liberal Patriotism"
  ideology_polish_patriotism_desc: "This group's loyal to the state and it's institution, however they don't wish for state to encroach into their private lives and bussineses."
  br_ideology_jadwigan_reformist: "Jadwigan Reformist"
