Armed Forces name to Sarmaci and add description
-Armed Forces name to Sarmaci and add description

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -51,6 +51,9 @@
  ig_jadwigans: "Jadwigans"
  ig_jadwigans_desc: "The Jadwigans are a reformist group led by Princess Jadwiga, Sigismund III’s daughter. She, like most of the group, is well educated and wishes to modernize and reform the Commonwealth. Most Jadwigans come from the nation’s intellectuals, but has also gained support from some of the most educated and liberal members of the Szlachta in recent years."
 
+ ig_sarmaci: "Sarmaci"
+ ig_sarmaci_desc: "Sarmaci, or Sarmatists, are a group who believe in the pseudo-historically based ideology of Sarmatism, an ethno-cultural ideology that professes Polish supremacism along with the belief in an ancient (and nonexistent) ancestry to the Sarmatian peoples. However this group is made up of those once considered radicals among the Sarmaci, but have now essentially become the mainstream for its believers."
+
  ig_hussite_church: "Hussite Church"
  ig_hussite_church_desc: "#lore The Hussite Church is a Christian denomination born in Bohemia from the teachings of Jan Hus. Advocating for communion in both kinds and resistance to corruption, it was a forerunner of the broader Protestant Reformation, blending faith with national identity.#!"
 
