--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -150,6 +150,8 @@
  br_ideology_jadwigan_reformist_desc: "Led by the Princess by whom the group gets its name, Jadwigans are not for the abolishment of the Monarchy, but they also hold the view that monarchs don’t get their power from a higher power, but from the people."
  br_ideology_warsaw_confederationist: "Warsaw confederationist"
  br_ideology_warsaw_confederationist_desc: "This group believes in the importance of the Warsaw Confederation, a legal document promising freedom of religion within the Commonwealth, something believed to have been ignored for too long."
+ br_ideology_sarmatist_nationalism: "Sarmatist Nationalism"
+ br_ideology_sarmatist_nationalism_desc: "To the Sarmatist, the Poles are the chosen people, and their nation must enforce that by any means."
  ideology_mongol_jingoist: "Mongol Jingoist"
  ideology_mongol_jingoist_desc: "Mongol Jingoist"
  ideology_irredentist: "Irredentist"
