--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -54,6 +54,9 @@
  ig_sarmaci: "Sarmaci"
  ig_sarmaci_desc: "Sarmaci, or Sarmatists, are a group who believe in the pseudo-historically based ideology of Sarmatism, an ethno-cultural ideology that professes Polish supremacism along with the belief in an ancient (and nonexistent) ancestry to the Sarmatian peoples. However this group is made up of those once considered radicals among the Sarmaci, but have now essentially become the mainstream for its believers."
 
+ ig_ruchy_solidarnosci: "Ruchy Solidarności"
+ ig_ruchy_solidarnosci_desc: "With the rise of industrialization, so to rises movements and ideologies to raise the workers’ concerns. In the Commonwealth the primary ideology is Solidarism, a moderate form of Socialism which seeks to make a fair form of economics that balances Socialism and Capitalism."
+
  ig_hussite_church: "Hussite Church"
  ig_hussite_church_desc: "#lore The Hussite Church is a Christian denomination born in Bohemia from the teachings of Jan Hus. Advocating for communion in both kinds and resistance to corruption, it was a forerunner of the broader Protestant Reformation, blending faith with national identity.#!"
 
