Changed Loyalist to Solidarist
-Made a new ideology: Solidarist
-Changed Loyalist to Solidarist for the plc Trade union IG
-TODO still need an icon for the new ideology

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -155,6 +155,8 @@
  br_ideology_warsaw_confederationist_desc: "This group believes in the importance of the Warsaw Confederation, a legal document promising freedom of religion within the Commonwealth, something believed to have been ignored for too long."
  br_ideology_sarmatist_nationalism: "Sarmatist Nationalism"
  br_ideology_sarmatist_nationalism_desc: "To the Sarmatist, the Poles are the chosen people, and their nation must enforce that by any means."
+ br_ideology_solidarist: "Solidarist"
+ br_ideology_solidarist_desc: ""
  ideology_mongol_jingoist: "Mongol Jingoist"
  ideology_mongol_jingoist_desc: "Mongol Jingoist"
  ideology_irredentist: "Irredentist"
