Changed Industrialists name to Przemysłowcy

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -57,6 +57,9 @@
  ig_ruchy_solidarnosci: "Ruchy Solidarności"
  ig_ruchy_solidarnosci_desc: "With the rise of industrialization, so to rises movements and ideologies to raise the workers’ concerns. In the Commonwealth the primary ideology is Solidarism, a moderate form of Socialism which seeks to make a fair form of economics that balances Socialism and Capitalism."
 
+ ig_przemyslowcy: "Przemysłowcy"
+ ig_przemyslowcy_desc: ""
+
  ig_hussite_church: "Hussite Church"
  ig_hussite_church_desc: "#lore The Hussite Church is a Christian denomination born in Bohemia from the teachings of Jan Hus. Advocating for communion in both kinds and resistance to corruption, it was a forerunner of the broader Protestant Reformation, blending faith with national identity.#!"
 
