Renamed PLC political parties
Political Party Flavor (Leave out Stuff in Parentheses)
- Agrarian Party name to Stronnictwo Chłopskie (Peasants Party)
- Conservative Party name to Stronnictwo Magnackie (Magnate’s Party) or Stronnictwo Konserwatywne (Conservative)
- Patriotic Party to Stronnictwo Narodowe (National Party)
- Liberal Party to Stronnictwo Patriotyczne (Patriot’s Party; a Commonwealth political party formed to promote reform in 1788) or Stronnictwo Reform (Reform Party)
- Social Democrats to Narodowa Partia Robotnicza (National Worker’s Party)
- Religious/Faith Party to Partia Boskiego Suwerena (Divine Sovereign Party; Name inspired by the Catholic oriented party Suwerenna Polska/Sovereign Party)
- Radical Party to Obywatelska Unia Wolności (Citizens' Liberty Union; Inspired by both Unia Wolności and Ruch Obywatelski Akcja Demokratyczna)
- Fascist Party to Narodowy Związek Radykałów (National Union of Radicals; Inspired from the 1934-1938 Polish Far-Right party Obóz Narodowo-Radykalny)
- Free Trade Party to Partia Wolnego Rynku (Free Market Party)
- Anarchist Party to Partia Anarchistyczna or Partia Decentralizacji Wspólnoty Narodów (Commonwealth Decentralization Party)
- Communist Party to Rada Pracowników Wspólnoty Narodów (Commonwealth Council of Workers)

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -405,6 +405,18 @@
  party_negotiatores_mercatores_conventus: "Negotiatores et Mercatores Conventus"
  party_abolitio_factiosi: "Abolitio Factiosi"
  party_communilist_partium: "Communilist Partium"
+ #PLC
+ br_party_stronnictwo_chlopskie: "Stronnictwo Chłopskie"
+ br_stronnictwo_magnackie: "Stronnictwo Magnackie"
+ br_stronnictwo_narodowe: "Stronnictwo Narodowe"
+ br_stronnictwo_patriotyczne: "Stronnictwo Patriotyczne"
+ br_narodowa_partia_robotnicza: "Narodowa Partia Robotnicza"
+ br_partia_boskiego_suwerena: "Partia Boskiego Suwerena"
+ br_obywatelska_unia_wolnosci: "Obywatelska Unia Wolności"
+ br_narodowy_zwiazek_radykalow: "Narodowy Związek Radykałów"
+ br_partia_wolnego_rynku: "Partia Wolnego Rynku"
+ br_partia_anarchistyczna: "Partia Anarchistyczna"
+ br_rada_pracownikow_wspolnoty_narodow: "Rada Pracowników Wspólnoty Narodów"
 
  #Game Rules
 
