--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -115,6 +115,10 @@
  br_modifier_hun_army: "Fekete sereg"
  br_modifier_hussite_legacy: "Hussite Legacy"
  br_modifier_winged_hussars: "Winged Hussars"
+ br_modifier_plc_succession_minor_support: "Minor Support"
+ br_modifier_plc_succession_moderate_support: "Moderate Support"
+ br_modifier_plc_succession_major_support: "Major Support"
+ br_modifier_plc_succession_stunted_opposition: "Stunted Opposition"
 
 
  #HRE
