Bandit event added to the insecurity journal

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -104,7 +104,11 @@
  palaiologos_events.10.a: "Maintain the tax—let the wealthy buy their peace."
  palaiologos_events.10.b: "Let all subjects serve. Romaíon must be defended by all who dwell within it."
 
- 
+ palaiologos_events.11.t: "Bandits in the Hills"
+ palaiologos_events.11.d: "Reports from [SCOPE.sState('bandit_raided_state').GetName] tell of marauding bands striking the countryside, stirring fear and outrage among the people."
+ palaiologos_events.11.f: "Disbanded soldiers and disillusioned peasants, emboldened by weak governance and corrupt officials, have turned to plunder. They strike from hidden camps in the hills, burning villages and seizing whatever wealth they can before melting back into the wilds."
+ palaiologos_events.11.a: "They shall answer for their crimes."
+
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
  poland.1.d: "For 167 Years, the Commonwealth has stood as the beacon of Civilization in Eastern Europe!"
