rework the land reform journal

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -104,10 +104,17 @@
  palaiologos_events.10.a: "Maintain the tax—let the wealthy buy their peace."
  palaiologos_events.10.b: "Let all subjects serve. Romaíon must be defended by all who dwell within it."
 
- palaiologos_events.11.t: "Bandits in the Hills"
- palaiologos_events.11.d: "Reports from [SCOPE.sState('bandit_raided_state').GetName] tell of marauding bands striking the countryside, stirring fear and outrage among the people."
- palaiologos_events.11.f: "Disbanded soldiers and disillusioned peasants, emboldened by weak governance and corrupt officials, have turned to plunder. They strike from hidden camps in the hills, burning villages and seizing whatever wealth they can before melting back into the wilds."
- palaiologos_events.11.a: "They shall answer for their crimes."
+ palaiologos_events.11.t: "The Brigands of the Hills"
+ palaiologos_events.11.d: "From the province of [SCOPE.sState('bandit_raided_state').GetName] come grave reports of λῃσταί (lēstai, brigands) and deserters preying upon the countryside. Their raids have sown terror among the villages and shamed the local archontes who failed to contain them."
+ palaiologos_events.11.f: "These outlaws, once soldiers of the tagmata and peasants of the themes, have turned to plunder under the cloak of night. They strike from crags and forests, burning fields and carrying off the poor into bondage. The people cry out for the justice of the Basileus, that the νόμος τῆς Ῥωμαίων (nomos tēs Rōmaiōn — law of the Romans) be restored."
+ palaiologos_events.11.a: "Send the imperial tagma to cleanse the hills."
+
+ palaiologos_events.12.t: "The Chrysobull of Agrarian Renewal"
+ palaiologos_events.12.d: "By decree of the Basileus and the Synkletos, the boundless arrogance of the Dynatoi shall be curbed. Their vast κτήματα (ktēmata, estates) are to be divided and restored to the χεροτέχναι γεωργοί (kherotechnai geōrgoi, skilled farmers) who labor upon them. Thus does the [ROOT.GetCountry.GetName] return to the righteous order of the oikouménē, where land and duty are one."
+ palaiologos_events.12.f: "In the imperial chancelleries, scribes speak of justice long delayed but at last fulfilled. Across the provinces, the humbled great houses grumble, yet the fields stir with new life. Some call this the ἀνακαίνισις τῆς χώρας (anakainisis tēs chōras, renewal of the land), wrought by divine providence and imperial will."
+ palaiologos_events.12.a: "So it is written — the Empire is renewed through justice."
+
+
 
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
