event added to Army journal

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -114,7 +114,10 @@
  palaiologos_events.12.f: "In the imperial chancelleries, scribes speak of justice long delayed but at last fulfilled. Across the provinces, the humbled great houses grumble, yet the fields stir with new life. Some call this the ἀνακαίνισις τῆς χώρας (anakainisis tēs chōras, renewal of the land), wrought by divine providence and imperial will."
  palaiologos_events.12.a: "So it is written — the Empire is renewed through justice."
 
-
+ palaiologos_events.13.t: "The Triumph of the Tagmata"
+ palaiologos_events.13.d: "Beneath the gaze of the Basileus and the holy icons, the banners of the [ROOT.GetCountry.GetAdjective] tagmata gleam once more over the Hippodrome. Veterans and new recruits alike march in lockstep, their discipline and valor praised as the renewal of the Empire’s ancient spirit."
+ palaiologos_events.13.f: "Once humbled by treachery and defeat, the Empire has risen anew. The trumpet of victory resounds through the Queen of Cities, and all proclaim: ‘Ζήτω ἡ Ῥωμανία!’ (Zētō hē Rōmanía — Long live Romania!). The Basileus may at last behold an army worthy of his purple mantle."
+ palaiologos_events.13.a: "Let the world know the might of the Romans."
 
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
