add event to bureaucracy reform

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -119,6 +119,11 @@
  palaiologos_events.13.f: "Once humbled by treachery and defeat, the Empire has risen anew. The trumpet of victory resounds through the Queen of Cities, and all proclaim: ‘Ζήτω ἡ Ῥωμανία!’ (Zētō hē Rōmanía — Long live Romania!). The Basileus may at last behold an army worthy of his purple mantle."
  palaiologos_events.13.a: "Let the world know the might of the Romans."
 
+ palaiologos_events.14.t: "The Bureaucratic Renaissance"
+ palaiologos_events.14.d: "Out of the ruins of obsolete offices and hereditary privilege has emerged a new class of servants — men trained in logic, law, and the measured art of governance. The Basileus’ reform has replaced the old scribes of habit with γραμματεῖς τοῦ λόγου (grammateis tou logou, secretaries of reason), whose duty is not mere record but the rational order of the state."
+ palaiologos_events.14.f: "‘Ἡ Ῥωμαϊκὴ πολιτεία οὐκ ἀποθνῄσκει, ἀλλὰ μεταμορφοῦται’ — ‘The Roman polity does not die, but transforms,’ writes a court philosopher. And in the quiet halls of the ministries, the Empire learns once more to think as it once ruled — with precision and purpose."
+ palaiologos_events.14.a: "The mind of the Empire stirs again."
+
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
  poland.1.d: "For 167 Years, the Commonwealth has stood as the beacon of Civilization in Eastern Europe!"
