add event to economy journal

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -124,6 +124,12 @@
  palaiologos_events.14.f: "‘Ἡ Ῥωμαϊκὴ πολιτεία οὐκ ἀποθνῄσκει, ἀλλὰ μεταμορφοῦται’ — ‘The Roman polity does not die, but transforms,’ writes a court philosopher. And in the quiet halls of the ministries, the Empire learns once more to think as it once ruled — with precision and purpose."
  palaiologos_events.14.a: "The mind of the Empire stirs again."
 
+ palaiologos_events.15.t: "The Renewal of the Oikonomia"
+ palaiologos_events.15.d: "By decree of the Basileus, the [ROOT.GetCountry.GetName] has set forth upon a great ἀνακαίνισις (anakainisis, renewal) of its oikonomia. Workshops are restored, new manufactories rise upon the ruins of the past, and commerce once more flows beneath the double-headed eagle."
+ palaiologos_events.15.f: "‘Οἰκονομία ἄνευ δικαιοσύνης ἐστὶ δουλεία’ — ‘Economy without justice is servitude,’ writes a philosopher of the capital. Yet many proclaim this new age as the dawn of the Empire’s second spring — a world forged not of marble, but of steel."
+ palaiologos_events.15.a: "Let the world witness the rebirth of Roman might."
+
+
  #PLC
  poland.1.t: "The Commonwealth: The Nobles’ Democracy/The Rome of the Slavs:"
  poland.1.d: "For 167 Years, the Commonwealth has stood as the beacon of Civilization in Eastern Europe!"
